--- a/smb_sample.conf
+++ b/smb_sample.conf
@@ -33,6 +33,8 @@
 # The specific set of interfaces / networks to bind to
 # This can be either the interface name or an IP address/netmask;
 # interface names are normally preferred
+
+# Change this to be the network that your balena lives on
    interfaces = 192.168.21.0/24 eth0
 
 # Only bind to the named interfaces and/or networks; you must use the
