--- a/smb_sample.conf
+++ b/smb_sample.conf
@@ -50,7 +50,7 @@
 
 # This tells Samba to use a separate log file for each machine
 # that connects
-   log file = /var/log/samba/log.%m
+   log file = /samba_shared/var/log/samba/log.%m
 
 # Cap the size of the individual log files (in KiB).
    max log size = 1000
